# nbconvert-article-html

./: .flake8  .gitignore  LICENSE  README.md  environment.yml  setup.cfg
examples/: Demonstration EN.html  Demonstration EN.ipynb  Demonstration FR.html  Demonstration FR.ipynb
nbconvert_article_html/: __init__.py
nbconvert_article_html/template/: index.html.j2
nbconvert_article_html/template/article-html/: conf.json
nbconvert_article_html/template/article_html/: conf.json  index.html.j2
script/: checks.py
test/: __init__.py  test_annotations.py  test_collector_abstract.py  test_collector_labels.py  test_solve_references.py
test/notebooks/: abstract-one-cell-single-string.ipynb  abstract-one-cell.ipynb  abstract-three-cells.ipynb  annotations-common.ipynb  labels_hierarchical.ipynb  labels_non_hierarchical.ipynb  no-abstract.ipynb  references-before-appearance.ipynb  references-custom.ipynb  references-notes.ipynb  references-simple.ipynb
