[metadata]
name = nbconvert_article_html
version = 0.9.1
description = Tools based on nbconvert to render a Jupyter notebook into a self-contained HTML file whose layout is similar to a LaTeX article.
url = https://github.com/hamelin/nbconvert-article-html
author = Benoit Hamelin
author_email = benoit@benoithamelin.com

long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Interpreters

[options]
packages = find:
python_requires = >=3.8
install_requires =
    nbconvert
    bs4

[options.packages.find]
exclude = test

[options.entry_points]
nbconvert.exporters =
    article-html = nbconvert_article_html:ArticleHTMLExporter
